[gd_scene load_steps=3 format=3 uid="uid://c2as8aqc7jbyy"]

[ext_resource type="FontFile" uid="uid://c2nvekmrvmbwg" path="res://Assets/Fonts/Daydream DEMO.otf" id="2_tf3q2"]
[ext_resource type="Script" uid="uid://b6g63yyqa2lip" path="res://Scripts/main_pause_menu.gd" id="2_yeo1y"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.6745098)
offset_left = -23.0
offset_top = -17.0
offset_right = 1161.0
offset_bottom = 664.0
color = Color(0, 0, 0, 1)

[node name="MainContainer" type="VBoxContainer" parent="CanvasLayer"]
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -232.0
offset_right = 277.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1
script = ExtResource("2_yeo1y")

[node name="ResumeButton" type="Button" parent="CanvasLayer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_tf3q2")
theme_override_font_sizes/font_size = 64
text = "Resume"
flat = true

[node name="SettingsButton" type="Button" parent="CanvasLayer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0.2765172, 0.5450768, 1)
theme_override_fonts/font = ExtResource("2_tf3q2")
theme_override_font_sizes/font_size = 64
text = "Settings"
flat = true

[node name="MainMenuButton" type="Button" parent="CanvasLayer/MainContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0.2765172, 0.5450768, 1)
theme_override_fonts/font = ExtResource("2_tf3q2")
theme_override_font_sizes/font_size = 64
text = "Main menu"
flat = true

[node name="SettingsContainer" type="VBoxContainer" parent="CanvasLayer"]
visible = false
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -232.0
offset_right = 277.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1

[node name="ResumeButton" type="Button" parent="CanvasLayer/SettingsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_tf3q2")
theme_override_font_sizes/font_size = 64
text = "Resume"
flat = true

[node name="SettingsButton" type="Button" parent="CanvasLayer/SettingsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0.2765172, 0.5450768, 1)
theme_override_fonts/font = ExtResource("2_tf3q2")
theme_override_font_sizes/font_size = 64
text = "Settings"
flat = true

[node name="MainMenuButton" type="Button" parent="CanvasLayer/SettingsContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0.2765172, 0.5450768, 1)
theme_override_fonts/font = ExtResource("2_tf3q2")
theme_override_font_sizes/font_size = 64
text = "Main menu"
flat = true

[connection signal="pressed" from="CanvasLayer/MainContainer/ResumeButton" to="CanvasLayer/MainContainer" method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/SettingsButton" to="CanvasLayer/MainContainer" method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/MainMenuButton" to="CanvasLayer/MainContainer" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsContainer/ResumeButton" to="CanvasLayer/SettingsContainer" method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsContainer/SettingsButton" to="CanvasLayer/SettingsContainer" method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsContainer/MainMenuButton" to="CanvasLayer/SettingsContainer" method="_on_main_menu_button_pressed"]
